comments/mysql-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-lb
  annotations:
    metallb.universe.tf/allow-shared-ip: "shared-ip-01"  # 使用相同的共享标识
spec:
  type: LoadBalancer
  ports:
    - port: 3306
      targetPort: 3306
      name: mysql
  selector:
    app: mysql
