comments/nacos-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: nacos-lb
  labels:
    app: nacos
  annotations:
    metallb.universe.tf/allow-shared-ip: "shared-ip-01"  # 添加与 redis-lb 相同的共享注解
spec:
  type: LoadBalancer
  ports:
    - port: 8848
      name: server
      targetPort: 8848
    - port: 9848
      name: client-rpc
      targetPort: 9848
    - port: 9849
      name: raft-rpc
      targetPort: 9849
    - port: 7848
      name: old-raft-rpc
      targetPort: 7848
  selector:
    app: nacos
