comments/redis-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-lb
  annotations:
    metallb.universe.tf/allow-shared-ip: "shared-ip-01"
spec:
  type: LoadBalancer
  ports:
  - name: redis
    port: 6379
    targetPort: 6379
  - name: sentinel
    port: 26379
    targetPort: 26379
  selector:
    app.kubernetes.io/instance: my-redis
    app.kubernetes.io/name: redis
