comments/seata_app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seata-app
  namespace: seata
  labels:
    k8s-app: seata-app
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: seata-app
  template:
    metadata:
      labels:
        k8s-app: seata-app
    spec:
      containers:
        - name: seata-app
          image: registry.digiwincloud.com.cn/dap/seata-benchmark-onebackend-5.2.0:1.0.0.1007
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8085
              protocol: TCP
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: service-a
spec:
  host: service-a
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
apiVersion: v1
kind: Service
metadata:
  name: seata-app
  namespace: seata
  labels:
    k8s-app: seata-app
spec:
  type: NodePort
  ports:
    - port: 8085
      nodePort: 30092
      protocol: TCP
      name: http
  selector:
    k8s-app: seata-app
---
